# learn-claude

./: .gitmodules  README.md  pyproject.toml
docs/: QUICKSTART.md
phase-c/: COMPARISON.md  _probe_utils.py  c01_comparison.csv
phase-c/claude-agent-sdk/: c01_feature_probe.py  t01_sdk_basics.py  t02_todo_and_tasks.py  t02b_safe_write.py  t03_subagents.py  t04_plan_mode.py  t05_custom_tools_and_hooks.py
phase-c/claude-code-cli/: c01_feature_probe.py  t01_cli_basics.py  t02_todo_and_tasks.py  t03_subagents.py  t04_plan_mode.py  t05_cli_features.py
phase-c/glm/: c01_feature_probe.py  t01_glm_basics.py  t02_build_agent_loop.py
phase-c/openai-agents-sdk/: c01_feature_probe.py  t01_sdk_basics.py  t02_handoffs_and_guardrails.py  t03_hooks_and_tracing.py
